sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: Unmatched closing brace '}' ignored here
    var t = 0}
             ^AlgInsertionSort:25: error: Unmatched closing brace '}' ignored here
}
^